<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="0dp"
    android:layout_marginTop="0dp"
    android:layout_marginRight="0dp"
    android:layout_marginBottom="0dp"
...
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:weightSum="20">


        <Spinner
            android:id="@+id/district_spinner"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:minHeight="20dp">

        </Spinner>
...
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2" />

        <Button
            android:id="@+id/next_button"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:backgroundTint="@color/app_blue"
            android:gravity="center"
            android:text="NEXT"
            android:textColor="@android:color/white">

        </Button>

    </LinearLayout>

...
