...
    <string name="cancel">Cancel</string>
    <string name="cancel_loading_form">Cancel</string>
    <string name="cancel_location">Cancel</string>
    <string name="canceling">Canceling</string>
    <string name="cannot_edit_completed_form">This form cannot be edited once it has been marked as finalized. It may be encrypted.</string>
    <string name="capture_audio">Record Sound</string>
    <string name="capture_image">Take Picture</string>
    <string name="capture_osm">Launch OpenMapKit</string>
    <string name="recapture_osm">Redo OSM Tagging</string>
    <string name="capture_video">Record Video</string>
    <string name="change_language">Change Language</string>
    <string name="change_password">ODK Password</string>
    <string name="change_username">ODK Username</string>
...
    <string name="admin_password_incorrect">Sorry, password is incorrect!</string>
    <string name="enter_admin_password">Enter Admin Password</string>
    <string name="change_admin_password">Change Admin Password</string>
    <string name="autosend">Auto send</string>
    <string name="found_in_main">Uncheck to hide from Main Menu</string>
    <string name="found_in_settings">Uncheck to hide from General Settings</string>
    <string name="form_forward">Next</string>
    <string name="form_backward">Back</string>
    <string name="navigation">Navigation</string>
    <string name="swipe_navigation">Use horizontal swipes</string>
    <string name="buttons_navigation">Use forward/backward buttons</string>
    <string name="swipe_buttons_navigation">Use swipes and buttons</string>
    <string name="launch_printer">Initiate Printing</string>
...
    <string name="persian_month_12">Esfand</string>
    <string name="moving_backwards_title">Moving backwards</string>
    <string name="moving_backwards_disabled_title">Moving backwards disabled</string>
    <string name="moving_backwards_disabled_message">Configure the device to prevent users from bypassing this setting?\n\nThe changes are:\n\u2022 Disable Edit Saved Form\n\u2022 Disable Save Form\n\u2022 Disable Go To Prompt\n\u2022 Set Constraint processing to Validate upon forward swipe</string>
    <string name="moving_backwards_enabled_title">Moving backwards enabled</string>
    <string name="moving_backwards_enabled_message">You may wish to review the following settings:\n\n\u2022 Edit Saved Form\n\u2022 Save Form\n\u2022 Go To Prompt\n\u2022 Constraint processing</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="newer_version_of_a_form_info">This is an update to a form you have</string>
    <string name="svg_file_does_not_exist">SVG file does not exist!</string>
    <string name="start_video_capture_instruction">Tap the screen to start recording</string>
    <string name="stop_video_capture_instruction">Recording started. Tap again to stop</string>
    <string name="no_columns_to_upload">No columns found in the form to upload.</string>
...
