package com.samagra.odktest.odktest;

import android.Manifest;
import android.provider.MediaStore;
import android.view.View;
import android.view.ViewGroup;
import android.view.ViewParent;

import androidx.test.espresso.DataInteraction;
import androidx.test.espresso.ViewInteraction;
import androidx.test.espresso.action.ViewActions;
import androidx.test.internal.runner.junit4.AndroidJUnit4ClassRunner;
import androidx.test.rule.ActivityTestRule;
import androidx.test.rule.GrantPermissionRule;

import com.samagra.ancillaryscreens.screens.splash.SplashActivity;
import com.samagra.odktest.R;

import org.hamcrest.Description;
import org.hamcrest.Matcher;
import org.hamcrest.TypeSafeMatcher;
import org.junit.Rule;
import org.junit.Test;
import org.junit.runner.RunWith;

import static androidx.test.espresso.Espresso.onData;
import static androidx.test.espresso.Espresso.onView;
import static androidx.test.espresso.action.ViewActions.click;
import static androidx.test.espresso.action.ViewActions.closeSoftKeyboard;
import static androidx.test.espresso.action.ViewActions.pressImeActionButton;
import static androidx.test.espresso.action.ViewActions.replaceText;
import static androidx.test.espresso.action.ViewActions.scrollTo;
import static androidx.test.espresso.matcher.ViewMatchers.Visibility.VISIBLE;
import static androidx.test.espresso.matcher.ViewMatchers.isDisplayed;
import static androidx.test.espresso.matcher.ViewMatchers.isRoot;
import static androidx.test.espresso.matcher.ViewMatchers.withClassName;
import static androidx.test.espresso.matcher.ViewMatchers.withContentDescription;
import static androidx.test.espresso.matcher.ViewMatchers.withEffectiveVisibility;
import static androidx.test.espresso.matcher.ViewMatchers.withId;
import static androidx.test.espresso.matcher.ViewMatchers.withText;
import static com.samagra.odktest.EspressoTools.waitFor;
import static org.hamcrest.Matchers.allOf;
import static org.hamcrest.Matchers.anything;
import static org.hamcrest.Matchers.is;


import android.app.Activity;
import android.content.Intent;
import android.graphics.BitmapFactory;
import android.os.Bundle;
import android.provider.MediaStore;
import androidx.test.espresso.intent.rule.IntentsTestRule;

import androidx.test.filters.LargeTest;

import org.junit.Before;
import org.junit.Rule;
import org.junit.Test;
import org.junit.runner.RunWith;
import org.odk.collect.android.activities.FormEntryActivity;

import static android.app.Instrumentation.ActivityResult;
import static androidx.test.espresso.Espresso.onView;
import static androidx.test.espresso.action.ViewActions.click;
import static androidx.test.espresso.assertion.ViewAssertions.matches;
import static androidx.test.espresso.intent.Intents.intending;
import static androidx.test.espresso.intent.matcher.IntentMatchers.hasAction;
import static androidx.test.espresso.matcher.ViewMatchers.withId;
import static org.hamcrest.Matchers.not;


@RunWith(AndroidJUnit4ClassRunner.class)

public class FillFormTest {

    private SplashActivity mLocatingActivity;

    @Rule
    public ActivityTestRule<SplashActivity> mActivityTestRule = new ActivityTestRule<>(SplashActivity.class);

    @Rule
    public GrantPermissionRule mGrantPermissionRule =
            GrantPermissionRule.grant(
                    "android.permission.ACCESS_FINE_LOCATION",
                    "android.permission.ACCESS_COARSE_LOCATION",
                    "android.permission.CAMERA",
                    "android.permission.READ_EXTERNAL_STORAGE",
                    "android.permission.WRITE_EXTERNAL_STORAGE");

    @Rule public GrantPermissionRule permissionRule = GrantPermissionRule.grant(Manifest.permission.CAMERA,Manifest.permission.READ_EXTERNAL_STORAGE,Manifest.permission.WRITE_EXTERNAL_STORAGE);


  /*  @Before
    public void setup()
    {
        mLocatingActivity = mActivityTestRule.getActivity();
    }*/


    @Test
    public void FillFormTest() {

        onView(isRoot()).perform(waitFor(3000));

        ViewInteraction appCompatEditText_username = onView(
                allOf(withId(com.samagra.ancillaryscreens.R.id.login_username),
                        childAtPosition(
                                childAtPosition(
                                        withClassName(is("android.widget.LinearLayout")),
                                        1),
                                0),
                        isDisplayed()));
        appCompatEditText_username.perform(replaceText("chaks"), closeSoftKeyboard());
        onView(isRoot()).perform(waitFor(1000));

        ViewInteraction appCompatEditText_password = onView(
                allOf(withId(com.samagra.ancillaryscreens.R.id.login_password),
                        childAtPosition(
                                childAtPosition(
                                        withClassName(is("android.widget.LinearLayout")),
                                        2),
                                0),
                        isDisplayed()));
        appCompatEditText_password.perform(replaceText("abcd1234"));
        onView(isRoot()).perform(waitFor(1000));

        ViewInteraction appCompatEditText_password1 = onView(
                allOf(withId(com.samagra.ancillaryscreens.R.id.login_password), withText("abcd1234"),
                        childAtPosition(
                                childAtPosition(
                                        withClassName(is("android.widget.LinearLayout")),
                                        2),
                                0),
                        isDisplayed()));
        appCompatEditText_password1.perform(pressImeActionButton());

        ViewInteraction appCompatButton_submit = onView(
                allOf(withId(com.samagra.ancillaryscreens.R.id.login_submit), withText("Submit"),
                        childAtPosition(
                                childAtPosition(
                                        withClassName(is("android.widget.LinearLayout")),
                                        2),
                                3),
                        isDisplayed()));
        appCompatButton_submit.perform(click());

        onView(isRoot()).perform(waitFor(2000));

        ViewInteraction linearLayout = onView(
                allOf(withId(R.id.inspect_school),
                        childAtPosition(
                                allOf(withId(R.id.parent_of_fill_forms),
                                        childAtPosition(
                                                withClassName(is("android.widget.RelativeLayout")),
                                                0)),
                                2),
                        isDisplayed()));
        linearLayout.perform(click());

        onView(isRoot()).perform(waitFor(1000));

        ViewInteraction appCompatSpinner = onView(
                allOf(withId(R.id.district_spinner),
                        childAtPosition(
                                childAtPosition(
                                        withId(com.samagra.ancillaryscreens.R.id.parent),
                                        3),
                                4),
                        isDisplayed()));
        appCompatSpinner.perform(click());
        onView(isRoot()).perform(waitFor(1000));

        DataInteraction appCompatCheckedTextView = onData(anything())
                .inAdapterView(childAtPosition(
                        withClassName(is("android.widget.PopupWindow$PopupBackgroundView")),
                        0))
                .atPosition(1);
        appCompatCheckedTextView.perform(click());
        onView(isRoot()).perform(waitFor(1000));

        ViewInteraction appCompatButton2 = onView(
                allOf(withId(R.id.next_button), withText("NEXT"),
                        childAtPosition(
                                childAtPosition(
                                        withId(com.samagra.ancillaryscreens.R.id.parent),
                                        3),
                                9),
                        isDisplayed()));
        appCompatButton2.perform(click());
        onView(isRoot()).perform(waitFor(1000));

        DataInteraction linearLayout2 = onData(anything())
                .inAdapterView(allOf(withId(android.R.id.list),
                        childAtPosition(
                                withId(R.id.llParent),
                                0)))
                .atPosition(0);
        linearLayout2.perform(click());
        onView(isRoot()).perform(waitFor(1000));

        ViewInteraction appCompatTextView = onView(
                allOf(withId(com.samagra.ancillaryscreens.R.id.form_forward_button), withText("Next"), withContentDescription("Next"),
                        childAtPosition(
                                allOf(withId(com.samagra.ancillaryscreens.R.id.buttonholder),
                                        childAtPosition(
                                                withId(com.samagra.ancillaryscreens.R.id.navigation_view),
                                                0)),
                                2),
                        isDisplayed()));
        appCompatTextView.perform(click());
        onView(isRoot()).perform(waitFor(1000));
        ViewInteraction appCompatTextView2 = onView(
                allOf(withId(com.samagra.ancillaryscreens.R.id.form_forward_button), withText("Next"), withContentDescription("Next"),
                        childAtPosition(
                                allOf(withId(com.samagra.ancillaryscreens.R.id.buttonholder),
                                        childAtPosition(
                                                withId(com.samagra.ancillaryscreens.R.id.navigation_view),
                                                0)),
                                2),
                        isDisplayed()));
        appCompatTextView2.perform(click());
        onView(isRoot()).perform(waitFor(1000));
        ViewInteraction appCompatRadioButton = onView(
                allOf(withText("Very Good"),
                        childAtPosition(
                                allOf(withId(R.id.select_container),
                                        childAtPosition(
                                                withClassName(is("android.widget.LinearLayout")),
                                                0)),
                                0),
                        isDisplayed()));

        appCompatRadioButton.perform(click());
        onView(isRoot()).perform(waitFor(1000));

        ViewInteraction appCompatTextView3 = onView(
                allOf(withId(R.id.form_forward_button), withText("Next"), withContentDescription("Next"),
                        childAtPosition(
                                allOf(withId(R.id.buttonholder),
                                        childAtPosition(
                                                withId(R.id.navigation_view),
                                                0)),
                                2),
                        isDisplayed()));
        appCompatTextView3.perform(click());
        onView(isRoot()).perform(waitFor(1000));

        onView(first(withText("Very Good")) ).perform(click() );
        onView(isRoot()).perform(ViewActions.swipeUp());
        onView(isRoot()).perform(waitFor(3000));

        ViewInteraction textInputEditText4 = onView(withIndex(withId(R.id.select_container),withText("Good"), 1));
        textInputEditText4.perform(click());
        onView(isRoot()).perform(waitFor(3000));

        ViewInteraction textInputEditText5 = onView(withIndex(withId(R.id.select_container),withText("Good"), 2));
        textInputEditText5.perform(click());
        onView(isRoot()).perform(waitFor(3000));

        ViewInteraction appCompatTextView4 = onView(
                allOf(withId(R.id.form_forward_button), withText("Next"), withContentDescription("Next"),
                        childAtPosition(
                                allOf(withId(R.id.buttonholder),
                                        childAtPosition(
                                                withId(R.id.navigation_view),
                                                0)),
                                2),
                        isDisplayed()));
        appCompatTextView4.perform(click());
        onView(isRoot()).perform(waitFor(1000));

        ViewInteraction appCompatRadioButton5 = onView(
                allOf(withText("Yes"),
                        childAtPosition(
                                allOf(withId(R.id.select_container),
                                        childAtPosition(
                                                withClassName(is("android.widget.LinearLayout")),
                                                0)),
                                0),
                        isDisplayed()));
        appCompatRadioButton5.perform(click());
        onView(isRoot()).perform(waitFor(1000));

        ViewInteraction appCompatTextView5 = onView(
                allOf(withId(R.id.form_forward_button), withText("Next"), withContentDescription("Next"),
                        childAtPosition(
                                allOf(withId(R.id.buttonholder),
                                        childAtPosition(
                                                withId(R.id.navigation_view),
                                                0)),
                                2),
                        isDisplayed()));
        appCompatTextView5.perform(click());
        onView(isRoot()).perform(waitFor(1000));


        ViewInteraction scrolledToTopSpinner = onView(
                allOf(childAtPosition(
                        childAtPosition(
                                withClassName(is("android.widget.LinearLayout")),
                                3),
                        2),
                        isDisplayed()));
        scrolledToTopSpinner.perform(click());

        onView(isRoot()).perform(waitFor(1000));


        DataInteraction appCompatCheckedTextView2 = onData(anything())
                .inAdapterView(childAtPosition(
                        withClassName(is("android.widget.PopupWindow$PopupBackgroundView")),
                        0))
                .atPosition(0);
        appCompatCheckedTextView2.perform(click());
        onView(isRoot()).perform(waitFor(2000));


        ViewInteraction appCompatRadioButton6 = onView(withIndex(withId(R.id.select_container),withText("0: Teacher doesn't know what Learning Outcome is mapped to the topic/subtopic OR they mention the wrong Learning Outcome"), 0));
        appCompatRadioButton6.perform(click());
        onView(isRoot()).perform(waitFor(2000));


        onView(isRoot()).perform(ViewActions.swipeUp());
        onView(isRoot()).perform(waitFor(3000));

        ViewInteraction appCompatRadioButton7 = onView(withIndex(withId(R.id.select_container),withText("Yes"), 0));
        appCompatRadioButton7.perform(click());
        onView(isRoot()).perform(waitFor(2000));


        ViewInteraction appCompatRadioButton8 = onView(withIndex(withId(R.id.select_container),withText("0: Teacher is not using Activity Based Learning when required"), 0));
        appCompatRadioButton8.perform(click());
        onView(isRoot()).perform(waitFor(2000));


        ViewInteraction appCompatRadioButton9 = onView(withIndex(withId(R.id.select_container),withText("Yes"), 1));
        appCompatRadioButton9.perform(click());
        onView(isRoot()).perform(waitFor(2000));



        ViewInteraction appCompatTextView6 = onView(
                allOf(withId(R.id.form_forward_button), withText("Next"), withContentDescription("Next"),
                        childAtPosition(
                                allOf(withId(R.id.buttonholder),
                                        childAtPosition(
                                                withId(R.id.navigation_view),
                                                0)),
                                2),
                        isDisplayed()));
        appCompatTextView6.perform(click());
        onView(isRoot()).perform(waitFor(1000));

        ViewInteraction button = onView(
                allOf(withId(R.id.capture_image), withText("Take Picture"),
                        childAtPosition(
                                childAtPosition(
                                        withClassName(is("org.odk.collect.android.widgets.ImageWidget")),
                                        2),
                                0),
                        isDisplayed()));
        button.perform(click());

        onView(isRoot()).perform(waitFor(5000));


        ViewInteraction appCompatTextView7 = onView(
                allOf(withId(R.id.form_forward_button), withText("Next"), withContentDescription("Next"),
                        childAtPosition(
                                allOf(withId(R.id.buttonholder),
                                        childAtPosition(
                                                withId(R.id.navigation_view),
                                                0)),
                                2),
                        isDisplayed()));
        appCompatTextView7.perform(click());
        onView(isRoot()).perform(waitFor(1000));

        ViewInteraction appCompatRadioButton10 = onView(
                allOf(withText("Yes"),
                        childAtPosition(
                                allOf(withId(R.id.select_container),
                                        childAtPosition(
                                                withClassName(is("android.widget.LinearLayout")),
                                                0)),
                                0),
                        isDisplayed()));
        appCompatRadioButton10.perform(click());

        onView(isRoot()).perform(waitFor(1000));

        ViewInteraction appCompatTextView8 = onView(
                allOf(withId(R.id.form_forward_button), withText("Next"), withContentDescription("Next"),
                        childAtPosition(
                                allOf(withId(R.id.buttonholder),
                                        childAtPosition(
                                                withId(R.id.navigation_view),
                                                0)),
                                2),
                        isDisplayed()));
        appCompatTextView8.perform(click());
        onView(isRoot()).perform(waitFor(1000));

        ViewInteraction editText = onView(
                allOf(childAtPosition(
                        childAtPosition(
                                withClassName(is("android.widget.LinearLayout")),
                                0),
                        2),
                        isDisplayed()));
        editText.perform(replaceText("Ggg"), closeSoftKeyboard());
        onView(isRoot()).perform(waitFor(1000));

        ViewInteraction appCompatTextView9 = onView(
                allOf(withId(R.id.form_forward_button), withText("Next"), withContentDescription("Next"),
                        childAtPosition(
                                allOf(withId(R.id.buttonholder),
                                        childAtPosition(
                                                withId(R.id.navigation_view),
                                                0)),
                                2),
                        isDisplayed()));
        appCompatTextView9.perform(click());

        onView(isRoot()).perform(waitFor(1000));

        ViewInteraction editText2 = onView(
                allOf(childAtPosition(
                        childAtPosition(
                                withClassName(is("android.widget.LinearLayout")),
                                0),
                        2),
                        isDisplayed()));
        editText2.perform(replaceText("Ghj"), closeSoftKeyboard());
        onView(isRoot()).perform(waitFor(1000));

        ViewInteraction appCompatTextView10 = onView(
                allOf(withId(R.id.form_forward_button), withText("Next"), withContentDescription("Next"),
                        childAtPosition(
                                allOf(withId(R.id.buttonholder),
                                        childAtPosition(
                                                withId(R.id.navigation_view),
                                                0)),
                                2),
                        isDisplayed()));
        appCompatTextView10.perform(click());

        onView(isRoot()).perform(waitFor(1000));

        ViewInteraction appCompatRadioButton11 = onView(
                allOf(withText("Yes, all the teachers use the learning outcomes (Seekhne ke Pratiphal) charts pasted in the classrooms"),
                        childAtPosition(
                                allOf(withId(R.id.select_container),
                                        childAtPosition(
                                                withClassName(is("android.widget.LinearLayout")),
                                                0)),
                                0),
                        isDisplayed()));
        appCompatRadioButton11.perform(click());

        onView(isRoot()).perform(waitFor(1000));

        ViewInteraction appCompatTextView11 = onView(
                allOf(withId(R.id.form_forward_button), withText("Next"), withContentDescription("Next"),
                        childAtPosition(
                                allOf(withId(R.id.buttonholder),
                                        childAtPosition(
                                                withId(R.id.navigation_view),
                                                0)),
                                2),
                        isDisplayed()));
        appCompatTextView11.perform(click());
        onView(isRoot()).perform(waitFor(1000));

        ViewInteraction button2 = onView(
                allOf(withId(R.id.capture_image), withText("Take Picture"),
                        childAtPosition(
                                childAtPosition(
                                        withClassName(is("org.odk.collect.android.widgets.ImageWidget")),
                                        2),
                                0),
                        isDisplayed()));
        button2.perform(click());
        onView(isRoot()).perform(waitFor(1000));

        ViewInteraction appCompatTextView12 = onView(
                allOf(withId(R.id.form_forward_button), withText("Next"), withContentDescription("Next"),
                        childAtPosition(
                                allOf(withId(R.id.buttonholder),
                                        childAtPosition(
                                                withId(R.id.navigation_view),
                                                0)),
                                2),
                        isDisplayed()));
        appCompatTextView12.perform(click());
        onView(isRoot()).perform(waitFor(1000));

        ViewInteraction appCompatRadioButton12 = onView(
                allOf(withText("None of the material has reached"),
                        childAtPosition(
                                allOf(withId(R.id.select_container),
                                        childAtPosition(
                                                withClassName(is("android.widget.LinearLayout")),
                                                0)),
                                0),
                        isDisplayed()));
        appCompatRadioButton12.perform(click());
        onView(isRoot()).perform(waitFor(1000));

        ViewInteraction appCompatTextView13 = onView(
                allOf(withId(R.id.form_forward_button), withText("Next"), withContentDescription("Next"),
                        childAtPosition(
